objects/Engagement_Map_NBA_Reasons__c.object
<CustomObject>
    <description>Custom object to store the Engagement Map Next Best Action Reasons description text values that associated to the Engagement Map Taxonomy products</description>
    <fields>
        <fullName>EngMap_Product_Name__c</fullName>
        <description>High level products that are used in the Engagement Map</description>
        <label>EngMap Product Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>iWD</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>GVP</fullName>
                </value>
                <value>
                    <fullName>Inbound Voice</fullName>
                </value>
                <value>
                    <fullName>Knowledge Center</fullName>
                </value>
                <value>
                    <fullName>Mobile Engagement</fullName>
                </value>
                <value>
                    <fullName>Nuance</fullName>
                </value>
                <value>
                    <fullName>Outbound Voice</fullName>
                </value>
                <value>
                    <fullName>Proactive Notification</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Virtual Hold</fullName>
                </value>
                <value>
                    <fullName>Web Callback</fullName>
                </value>
                <value>
                    <fullName>Web Collaboration</fullName>
                </value>
                <value>
                    <fullName>Web Engagement</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics</fullName>
                </value>
                <value>
                    <fullName>Interaction Recording</fullName>
                </value>
                <value>
                    <fullName>Quality Management</fullName>
                </value>
                <value>
                    <fullName>WFM</fullName>
                </value>
                <value>
                    <fullName>CIM</fullName>
                </value>
                <value>
                    <fullName>SIP</fullName>
                </value>
                <value>
                    <fullName>Video Gateway</fullName>
                </value>
                <value>
                    <fullName>InfoMart</fullName>
                </value>
                <value>
                    <fullName>Interactive Insights</fullName>
                </value>
                <value>
                    <fullName>Conversation Manager</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Speechstorm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NBA_Reason_Logic_Text__c</fullName>
        <description>The logic version of the NBA Reason Text</description>
        <label>NBA Reason Logic Text</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NBA_Reason_Text__c</fullName>
        <description>Next Best Action Reason Text</description>
        <label>Next Best Action Reason Text</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <label>Engagement Map NBA Reasons</label>
    <nameField>
        <label>Engagement Map NBA Reasons Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Map NBA Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>